--- a/src/styles/pages/contact.module.scss
+++ b/src/styles/pages/contact.module.scss
@@ -1,25 +1,26 @@
 .main{
-    margin: 40px;
-    margin-top: 50px;
-    font-size: 20px;
+  margin: 40px;
+  margin-top: 50px;
+  font-size: 20px;
+  position: absolute;
 
-    .textContainer{
-        display: inline-block
-    }
+  .textContainer{
+    display: inline-block
+  }
 
-    .contactContainer{
-        display: inline-block
-    }
+  .contactContainer{
+    display: inline-block
+  }
 }
 
 .title{
-    font-family: Inter;
-    font-weight: bold;
-    font-size: 40px;
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 40px;
 }
 
 .subtext{
-    font-family: Open Sans;
-    font-size: 17px;
-    margin-top: 20px;
+  font-family: Open Sans;
+  font-size: 17px;
+  margin-top: 20px;
 }
