--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -1,16 +1,23 @@
 .body{
   width: 100vw;
-  margin: 40px;
-  margin-top: 120px;
-  font-size: 20px;
-  text-align: center;
+  height: 100vh;
+  padding-top: 120px;
   position: absolute;
+}
+
+.main{
+  display: block;
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
 }
 
 .titleContainer{
   font-family: Inter;
   font-weight: bold;
   width: 100%;
+  display: block;
+  margin: auto;
 
   .titleRegular{
     display: inline-block;
@@ -32,8 +39,9 @@
 
 .bodyContainer{
   display: grid;
-  grid-template-columns: 460px 540px;
+  grid-template-columns: 440px 560px;
   margin-top: 30px;
+  width: 100%;
 }
 
 .intro{
@@ -55,7 +63,6 @@
 
 .image{
   width: 100%;
-  height: 100%;
   border: 1px solid grey;
   padding-left: 40px;
 }
