--- a/src/App.scss
+++ b/src/App.scss
@@ -1,27 +1,29 @@
 @font-face {
-  font-family: 'Grand Hotel';
-  src: url('./fonts/Grand_Hotel/GrandHotel-Regular.otf');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('./fonts/Open_Sans/OpenSans-Regular.ttf');
-  //src: url('./fonts/Open_Sans/OpenSans-Light.ttf');
-}
-
-@font-face {
-  font-family: 'Pacifico';
-  src: url('./fonts/Pacifico/Pacifico-Regular.ttf');
+  font-family: 'Inter';
+  src: url('./fonts/Inter/Inter-Light.woff');
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
   font-family: 'Inter';
   src: url('./fonts/Inter/Inter-Regular.woff');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('./fonts/Raleway/Raleway-Regular.ttf');
+  font-family: 'Inter';
+  src: url('./fonts/Inter/Inter-SemiBold.woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fonts/Inter/Inter-LightItalic.woff');
+  font-weight: 200;
+  font-style: italic;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400&display=swap');
@@ -38,10 +40,37 @@ html {
 }
 
 *, *:before, *:after {
+  font-family: Inter;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.005);
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+  -webkit-text-stroke: .025em rgba(51,51,51,0.1);
+  
   box-sizing: border-box;
   font-size: 0px;
 }
 
 ::selection{
   background: #FFFF00;
+}
+
+/* width */
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track{
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb{
+  background: #888;
+  opacity: 0.5;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover{
+  background: #555;
 }
