--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -1,23 +1,28 @@
-.body{
+.animated{
   width: 100vw;
   height: 100vh;
-  padding-top: 120px;
   position: absolute;
+  overflow: hidden;
 }
 
-.main{
-  display: block;
-  width: 100%;
-  max-width: 1000px;
-  margin: auto;
+.scrollbox{
+  padding-top: 110px;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
-.titleContainer{
-  font-family: Inter;
+.body{
+  max-width: 700px;
+  padding: 0px 20px 0px 20px;
+  margin: 0 auto 0 auto;
+}
+
+.title{
   font-weight: bold;
   width: 100%;
   display: block;
-  margin: auto;
 
   .titleRegular{
     display: inline-block;
@@ -37,32 +42,46 @@
   }
 }
 
-.bodyContainer{
-  display: grid;
-  grid-template-columns: 440px 560px;
-  margin-top: 30px;
-  width: 100%;
+.separator{
+  margin-top: 54px;
+  margin-bottom: 54px;
+  height: 1px;
+  border-bottom: 1px solid #E1E1E1;
 }
 
-.intro{
-  font-family: Open Sans;
-  font-size: 17px;
-  max-width: 500px;
-  margin-bottom: 30px;
-  padding-right: 40px;
-  color: #595959;
+.subtitle{
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 54px;
+  color: black;
+  text-align: left;
+}
+
+.paragraph{
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 300;
+  margin-top: 32px;
+  color: #222222;
   text-align: left;
 }
 
 .resume{
-  font-size: 17px;
+  font-size: 18px;
   font-weight: bold;
   color: #292929;
   cursor: pointer;
+  margin-top: 32px;
 }
 
 .image{
-  width: 100%;
-  border: 1px solid grey;
-  padding-left: 40px;
+  width: 700px;
+  height: 460px;
+  user-select: none;
+
+  img{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #E1E1E1;
+  }
 }
