--- a/src/styles/pages/contact.module.scss
+++ b/src/styles/pages/contact.module.scss
@@ -1,26 +1,77 @@
-.main{
-  margin: 40px;
-  margin-top: 50px;
-  font-size: 20px;
+.animated{
+  width: 100vw;
+  height: 100vh;
   position: absolute;
+  overflow: hidden;
+}
 
-  .textContainer{
-    display: inline-block
-  }
+.scrollbox{
+  padding-top: 110px;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
-  .contactContainer{
-    display: inline-block
-  }
+.body{
+  max-width: 800px;
+  margin: 0 auto 0 auto;
+  padding: 0px 20px 0px 20px;
+  font-size: 20px;
 }
 
 .title{
-  font-family: Inter;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 40px;
 }
 
 .subtext{
-  font-family: Open Sans;
-  font-size: 17px;
   margin-top: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+}
+
+form{
+  margin-top: 30px;
+  margin-bottom: 60px;
+
+  input{
+    font-size: 16px;
+    font-weight: 300;
+    padding: 10px;
+    width: calc(50% - 10px);
+    border-radius: 4px;
+    border: 1px solid grey;
+  }
+
+  .separator{
+    width: 20px;
+    display: inline-block;
+  }
+
+  textarea{
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: 300;
+    width: 100%;
+    height: 300px;
+    resize: none;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid grey;
+  }
+
+  .submit{
+    display: block;
+    margin-top: 30px;
+    width: 200px;
+    background-color: #2f89fc;
+    color: white;
+    border: none;
+  }
+}
+
+.text{
+  font-size: 20px;
 }
