--- a/src/styles/components/project.module.scss
+++ b/src/styles/components/project.module.scss
@@ -1,23 +1,34 @@
 .main{
-    display: inline-block;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    cursor: pointer;
+  display: inline-block;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .image{
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 .inactive{
-    filter: grayscale(100%);
-    opacity: 0.5;
-    transition: filter 0.5s ease, opacity 0.5s ease;
+  filter: grayscale(100%);
+  opacity: 0.5;
+  transition: filter 0.5s ease, opacity 0.5s ease;
 }
 
 .active{
-    filter: grayscale(0%);
-    opacity: 1;
-    transition: filter 0.5s ease, opacity 0.5s ease;
+  filter: grayscale(0%);
+  opacity: 1;
+  transition: filter 0.5s ease, opacity 0.5s ease;
+}
+
+.placeholder{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .2), transparent);
+  z-index: 2
 }
