--- a/src/styles/components/project.module.scss
+++ b/src/styles/components/project.module.scss
@@ -29,6 +29,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .2), transparent);
+  background-color: grey;
   z-index: 2
 }
