--- a/src/styles/pages/projects.module.scss
+++ b/src/styles/pages/projects.module.scss
@@ -21,10 +21,13 @@
 .sidePane{
   display: inline-block;
   position: fixed;
+  top: 100;
   width: 300px;
   height: calc(100vh - 200px);
-  border-top: 1px solid grey;
-  border-bottom: 1px solid grey;
+  border-top: 1px solid #bbbbbb;
+  border-bottom: 1px solid #bbbbbb;
+  display: grid;
+  grid-template-rows: 70px auto 80px 82px;
 
   .appName{
     font-size: 24px;
@@ -43,6 +46,7 @@
 
   .appTags{
     display: block;
+    align-self: baseline;
 
     div{
       display: inline-block;
