--- a/src/styles/pages/contact.module.scss
+++ b/src/styles/pages/contact.module.scss
@@ -87,3 +87,12 @@ form{
 .text{
   font-size: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .body{
+    margin: none;
+    padding: 0px 25px 0px 25px;
+    width: 100vw;
+    max-width: 100vw;
+  }
+}
