--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -4,8 +4,7 @@
   padding-bottom: 70px;
   height: 70px;
   z-index: 3;
-  background-color: white;
-  width: calc(100vw - 12px);
+  width: 100%;
 }
 
 .name{
