--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -1,9 +1,3 @@
-.animated{
-  width: 100vw;
-  position: absolute;
-  overflow: hidden;
-}
-
 .body{
   max-width: 700px;
   padding: 0px 25px 0px 25px;
@@ -67,7 +61,7 @@
 }
 
 .image{
-  width: 700px;
+  width: 100%;
   height: 460px;
   user-select: none;
 
