--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,11 @@ html{
   font-size: 0px;
 }
 
+body{
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  padding: 12px;
+}
+
 ::selection{
   background: #FFFF00;
 }
@@ -68,4 +73,14 @@ html{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover{
   background: #555;
+}
+
+.main{
+  min-height: calc(100vh - 24px);
+  background: inherit;
+  font-size: 20px;
+  background-color: rgba(255, 255, 255, 0.75);  
+  backdrop-filter: blur(10px);  
+  border-radius: 12px;
+  overflow: hidden;
 }
