--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -68,12 +68,14 @@
 
 .image{
   width: 700px;
-  height: 460px;
+  height: 700px;
   user-select: none;
+  overflow: hidden;
 
   img{
     width: 100%;
     height: 100%;
     border: 1px solid #E1E1E1;
+    object-fit: cover;
   }
 }
