some long-awaited updates

--- a/src/styles/components/experience.module.scss
+++ b/src/styles/components/experience.module.scss
@@ -1,25 +1,75 @@
-.experience{
+.experience {
 
   margin-top: 32px;
 
-  div{
+  .button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    .logo {
+      vertical-align: top;
+      display: inline-block;
+      margin-right: 32px;
+      padding: 8px;
+      box-shadow: 0 20px 25px -5px rgba(0,0,0,.1), 0 8px 10px -6px rgba(0,0,0,.1);
+      border-radius: 8px;
+      line-height: 0;
+      font-size: 0;
+
+      img {
+        width: 48px;
+        height: 48px;
+      }
+    }
+
+    .fullLogo {
+      vertical-align: top;
+      display: inline-block;
+      margin-right: 32px;
+      box-shadow: 0 20px 25px -5px rgba(0,0,0,.1), 0 8px 10px -6px rgba(0,0,0,.1);
+      border-radius: 8px;
+      line-height: 0;
+      font-size: 0;
+      overflow: hidden;
+
+      img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+
+    .header {
+      display: inline-block;
+    }
+  }
+
+  div {
     font-family: Inter;
     font-size: 18px;
     line-height: 32px;
-    color: #222222;
+    color: #1a1a1a;
   }
 
-  .time{
+  .time {
     font-style: italic;
+    font-weight: 300;
+    font-size: 16px;
+    color: #616161;
+  }
+
+  .company {
     font-weight: 300;
   }
 
-  .company{
+  .title {
     font-weight: 500;
   }
 
-  .title{
+  .location {
     font-weight: 300;
+    font-size: 16px;
+    color: #616161;
   }
 
 }
