--- a/src/App.scss
+++ b/src/App.scss
@@ -51,21 +51,29 @@ html{
 
 /* width */
 ::-webkit-scrollbar{
-  width: 12px;
+  width: 14px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track{
-  background: #f1f1f1;
+  background: #fafafa;
+  border-left: 1px solid #e8e8e8;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb{
-  background: #888;
-  opacity: 0.5;
+  background: #c1c1c1;
+  border: 4px solid transparent;
+  border-right: 3px solid transparent;
+  border-radius: 8px;
+  background-clip: content-box;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover{
-  background: #555;
+  background: #7d7d7d;
+  border: 4px solid transparent;
+  border-right: 3px solid transparent;
+  border-radius: 8px;
+  background-clip: content-box;
 }
