--- a/src/styles/components/project.module.scss
+++ b/src/styles/components/project.module.scss
@@ -3,6 +3,9 @@
   margin-right: 15px;
   margin-bottom: 15px;
   cursor: pointer;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,.1), 0 8px 10px -6px rgba(0,0,0,.1);
 }
 
 .image{
