--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -33,8 +33,8 @@
 }
 
 .separator{
-  margin-top: 54px;
-  margin-bottom: 54px;
+  margin-top: 48px;
+  margin-bottom: 48px;
   height: 1px;
   border-bottom: 1px solid #E1E1E1;
 }
@@ -49,9 +49,9 @@
 
 .paragraph{
   font-size: 18px;
-  line-height: 24px;
+  line-height: 28px;
   font-weight: 300;
-  margin-top: 32px;
+  margin-top: 40px;
   color: #222222;
   text-align: left;
 }
@@ -61,17 +61,18 @@
   font-weight: bold;
   color: #292929;
   cursor: pointer;
-  margin-top: 32px;
-  display: block;
+  margin-top: 40px;
+  display: inline-block;
   text-decoration: none;
 }
 
 .image{
-  width: 700px;
-  height: 700px;
+  max-width: 700px;
+  aspect-ratio: 1 / 1;
   user-select: none;
   overflow: hidden;
   border-radius: 16px;
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,.1), 0 8px 10px -6px rgba(0,0,0,.1);
 
   img{
     width: 100%;
